# mpc_casadi

./: CMakeLists.txt  package.xml
launch/: vast_navigation_nmpc.launch  vast_tracking_nmpc.launch
params/: vast_constraints.yaml
plotting/: plot_navigation.py  plot_tracking.py
src/: nmpc_controller.py  nmpc_nav_node.py  nmpc_node.py  trajectory.py
test/: test_nmpc.py
